Revert "fixes: Ändrat storlek till p fonts till mindre. Ändrat så att sidebar closed följer färg ändringarna vid dark mode shift. Ändrat model.png till en mindre storlek."
This reverts commit 1317e18daa0a5b1b5cb617ddb0e74ff541c5e6a7.

--- a/src/app.css
+++ b/src/app.css
@@ -762,5 +762,5 @@ body {
 }
 
 p {
-  font-size: 0,8em !important;
+  font-size: 1.3em !important;
 }
